finalisation page service-client.html ajout img et css

--- a/_souces/service-client.html
+++ b/_souces/service-client.html
@@ -33,6 +33,20 @@
 <main>
     <h1>Service <strong>CLIENTS</strong></h1>
 
+    <h2>Contact/ SAV</h2>
+
+    <p>Toujours connectés et heureux de répondre à vos questions.
+    Vous pouvez utiliser le formulaire de contact ci-dessous,
+    ou bien par téléphone au 06.78.19.47.89 ou encore par Whatsapp.</p>
+
+    <p>Avant de nous contacter, avez-vous pensé à télécharger le manuel utilisateur ?</p>
+
+    <div class="manuels">
+        <img src="img/manuel-neopixel.png" alt="Manuel utilisateur Neopixel">
+        <img src="img/manuel-sound.png" alt="Manuel utilisateur Sound">
+        <img src="img/manuel-stunt.png" alt="Manuel utilisateur Stunt">
+    </div>
+
 
 </main>
 <footer>
