ajout page sabre.html

--- a/_souces/index.html
+++ b/_souces/index.html
@@ -19,98 +19,138 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="16x16">
 </head>
 <body class="page-accueil">
-    <header>
-        <a href="index.html" class="logo">
-            <img src="img/logo-jppjsl.png" alt="Logo de J&#039;peux pas j&#039;ai sabre laser">
-        </a>
-        <nav>
-            <ul>
-                <li><a class="actif" href="index.html">Accueil</a></li>
-                <li><a href="service-client.html">Service client</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Découvrez nos sabres <strong>LASER</strong></h1>
-
-        <ul class="sabres">
-            <li>
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
-                    </figcaption>
-                </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
-                    </figcaption>
-                </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
-                    </figcaption>
-                </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
-                    </figcaption>
-                </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
-                    </figcaption>
-                </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
-                    </figcaption>
-                </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
-                    </figcaption>
-                </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
-                    </figcaption>
-                </figure>
-            </li>
+<header>
+    <a href="index.html" class="logo">
+        <img src="img/logo-jppjsl.png"
+             alt="Logo de J&#039;peux pas j&#039;ai sabre laser">
+    </a>
+    <nav>
+        <ul>
+            <li><a class="actif" href="index.html">Accueil</a></li>
+            <li><a href="service-client.html">Service client</a></li>
         </ul>
-    </main>
-    <footer>
-        <img src="img/logo-jppjsl-clair.png" alt="Logo de J&#039;peux pas j&#039;ai sabre laser">
-        <div>&copy;2023 JPPJSL</div>
-    </footer>
+    </nav>
+</header>
+<main>
+    <h1>Découvrez nos sabres <strong>LASER</strong></h1>
+
+    <ul class="sabres">
+        <li>
+            <a href="sabre.html">
+                <figure>
+                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+                    <figcaption>
+                        <h2>Sabre laser Cal Kestis</h2>
+                        <div class="prix">1500€</div>
+                    </figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="sabre.html">
+                <figure>
+                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+                    <figcaption>
+                        <h2>Sabre laser Cal Kestis</h2>
+                        <div class="prix">1500€</div>
+                    </figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="sabre.html">
+                <figure>
+                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+                    <figcaption>
+                        <h2>Sabre laser Cal Kestis</h2>
+                        <div class="prix">1500€</div>
+                    </figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="sabre.html">
+                <figure>
+                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+                    <figcaption>
+                        <h2>Sabre laser Cal Kestis</h2>
+                        <div class="prix">1500€</div>
+                    </figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="sabre.html">
+                <figure>
+                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+                    <figcaption>
+                        <h2>Sabre laser Cal Kestis</h2>
+                        <div class="prix">1500€</div>
+                    </figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="sabre.html">
+                <figure>
+                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+                    <figcaption>
+                        <h2>Sabre laser Cal Kestis</h2>
+                        <div class="prix">1500€</div>
+                    </figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="sabre.html">
+                <figure>
+                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+                    <figcaption>
+                        <h2>Sabre laser Cal Kestis</h2>
+                        <div class="prix">1500€</div>
+                    </figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="sabre.html">
+                <figure>
+                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+                    <figcaption>
+                        <h2>Sabre laser Cal Kestis</h2>
+                        <div class="prix">1500€</div>
+                    </figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="sabre.html">
+                <figure>
+                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+                    <figcaption>
+                        <h2>Sabre laser Cal Kestis</h2>
+                        <div class="prix">1500€</div>
+                    </figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="sabre.html">
+                <figure>
+                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+                    <figcaption>
+                        <h2>Sabre laser Cal Kestis</h2>
+                        <div class="prix">1500€</div>
+                    </figcaption>
+                </figure>
+            </a>
+        </li>
+    </ul>
+</main>
+<footer>
+    <img src="img/logo-jppjsl-clair.png"
+         alt="Logo de J&#039;peux pas j&#039;ai sabre laser">
+    <div>&copy;2023 JPPJSL</div>
+</footer>
 </body>
 </html>
