ajout stock et ajustement css

--- a/_souces/index.html
+++ b/_souces/index.html
@@ -26,7 +26,7 @@
     </a>
     <nav>
         <ul>
-            <li><a class="actif" href="index.html">Accueil</a></li>
+            <li><a class="actif" href="index.html">No sabres</a></li>
             <li><a href="service-client.html">Service client</a></li>
         </ul>
     </nav>
@@ -41,7 +41,19 @@
                     <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
                     <figcaption>
                         <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
+                        <div class="prix">349 CHF</div>
+                    </figcaption>
+                </figure>
+            </a>
+        </li>
+        <li class="rupture">
+            <a href="sabre.html">
+                <figure>
+                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+                    <figcaption>
+                        <p>Noooon, les stocks sont vides !</p>
+                        <h2>Sabre laser Cal Kestis</h2>
+                        <div class="prix">349 CHF</div>
                     </figcaption>
                 </figure>
             </a>
@@ -52,7 +64,7 @@
                     <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
                     <figcaption>
                         <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
+                        <div class="prix">349 CHF</div>
                     </figcaption>
                 </figure>
             </a>
@@ -63,7 +75,7 @@
                     <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
                     <figcaption>
                         <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
+                        <div class="prix">349 CHF</div>
                     </figcaption>
                 </figure>
             </a>
@@ -74,7 +86,7 @@
                     <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
                     <figcaption>
                         <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
+                        <div class="prix">349 CHF</div>
                     </figcaption>
                 </figure>
             </a>
@@ -85,7 +97,7 @@
                     <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
                     <figcaption>
                         <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
+                        <div class="prix">349 CHF</div>
                     </figcaption>
                 </figure>
             </a>
@@ -96,7 +108,7 @@
                     <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
                     <figcaption>
                         <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
+                        <div class="prix">349 CHF</div>
                     </figcaption>
                 </figure>
             </a>
@@ -107,7 +119,7 @@
                     <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
                     <figcaption>
                         <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
+                        <div class="prix">349 CHF</div>
                     </figcaption>
                 </figure>
             </a>
@@ -118,7 +130,7 @@
                     <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
                     <figcaption>
                         <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
+                        <div class="prix">349 CHF</div>
                     </figcaption>
                 </figure>
             </a>
@@ -129,18 +141,7 @@
                     <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
                     <figcaption>
                         <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
-                    </figcaption>
-                </figure>
-            </a>
-        </li>
-        <li>
-            <a href="sabre.html">
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">1500€</div>
+                        <div class="prix">349 CHF</div>
                     </figcaption>
                 </figure>
             </a>
