--- a/_souces/sabre.html
+++ b/_souces/sabre.html
@@ -25,7 +25,7 @@
         </a>
         <nav>
             <ul>
-                <li><a class="actif" href="index.html">Accueil</a></li>
+                <li><a class="actif" href="index.html">No sabres</a></li>
                 <li><a href="service-client.html">Service client</a></li>
             </ul>
         </nav>
@@ -33,16 +33,20 @@
     <main>
         <div class="sabre">
             <h1>Sabre laser Cal Kestis</h1>
+
             <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+
             <p>
                 Le SL-Cal est un sabre laser de la gamme REPLIKA.
                 Inspiré par le sabre de Cal Kestis, dans le jeu
                 « Fallen Order » (réplique non officielle).
             </p>
+
             <ul class="details">
-                <li>Prix : 1500€</li>
-                <li>Longueur : 27cm</li>
-                <li>Poids : 1,2kg</li>
+                <li>Prix: 349 CHF</li>
+                <li>Stock: 10 pièces</li>
+                <li>Longueur: 38cm</li>
+                <li>Poids: 0,600 kg</li>
             </ul>
         </div>
     </main>
