--- a/_souces/service-client.html
+++ b/_souces/service-client.html
@@ -25,7 +25,7 @@
     </a>
     <nav>
         <ul>
-            <li><a href="index.html">Accueil</a></li>
+            <li><a href="index.html">No sabres</a></li>
             <li><a class="actif" href="service-client.html">Service client</a></li>
         </ul>
     </nav>
