création app bases

--- a/_souces/index.html
+++ b/_souces/index.html
@@ -18,11 +18,13 @@
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="16x16">
 </head>
-<body class="page-accueil">
+<body>
 <header>
-    <a href="index.html" class="logo">
+    <a href="index.html">
         <img src="img/logo-jppjsl.png"
-             alt="Logo de J&#039;peux pas j&#039;ai sabre laser">
+             class="logo"
+             alt="Logo de J&#039;peux pas j&#039;ai sabre laser"
+        >
     </a>
     <nav>
         <ul>
@@ -31,7 +33,7 @@
         </ul>
     </nav>
 </header>
-<main>
+<main class="page-accueil">
     <h1>Découvrez nos sabres <strong>LASER</strong></h1>
 
     <ul class="sabres">
