--- a/_souces/service-client.html
+++ b/_souces/service-client.html
@@ -18,19 +18,23 @@
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="16x16">
 </head>
-<body class="page-service-client">
+<body>
 <header>
-    <a href="index.html" class="logo">
-        <img src="img/logo-jppjsl.png" alt="Logo de J&#039;peux pas j&#039;ai sabre laser">
+    <a href="index.html">
+        <img src="img/logo-jppjsl.png"
+             class="logo"
+             alt="Logo de J&#039;peux pas j&#039;ai sabre laser"
+        >
     </a>
     <nav>
         <ul>
             <li><a href="index.html">No sabres</a></li>
-            <li><a class="actif" href="service-client.html">Service client</a></li>
+            <li><a class="actif" href="service-client.html">Service client</a>
+            </li>
         </ul>
     </nav>
 </header>
-<main>
+<main class="page-service-client">
     <h1>Service <strong>CLIENTS</strong></h1>
 
     <h2>Contact / SAV</h2>
@@ -52,14 +56,14 @@
             <img src="img/manuel-sound.png" alt="Manuel utilisateur Sound">
         </a>
         <a href="https://drive.google.com/file/d/1K0iZyPng4rZ4IqitedQ5b_cNgeThqcVY/view?usp=sharing">
-            <img src="img/manuel-neopixel.png" alt="Manuel utilisateur Neopixel">
+            <img src="img/manuel-neopixel.png"
+                 alt="Manuel utilisateur Neopixel">
         </a>
     </div>
-
-
 </main>
 <footer>
-    <img src="img/logo-jppjsl-clair.png" alt="Logo de J&#039;peux pas j&#039;ai sabre laser">
+    <img src="img/logo-jppjsl-clair.png"
+         alt="Logo de J&#039;peux pas j&#039;ai sabre laser">
     <div>&copy;2023 JPPJSL</div>
 </footer>
 </body>
