--- a/_souces/sabre.html
+++ b/_souces/sabre.html
@@ -18,41 +18,45 @@
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="16x16">
 </head>
-<body class="page-sabre">
-    <header>
-        <a href="index.html" class="logo">
-            <img src="img/logo-jppjsl.png" alt="Logo de J&#039;peux pas j&#039;ai sabre laser">
-        </a>
-        <nav>
-            <ul>
-                <li><a class="actif" href="index.html">No sabres</a></li>
-                <li><a href="service-client.html">Service client</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="sabre">
-            <h1>Sabre laser Cal Kestis</h1>
+<body>
+<header>
+    <a href="index.html">
+        <img src="img/logo-jppjsl.png"
+             class="logo"
+             alt="Logo de J&#039;peux pas j&#039;ai sabre laser"
+        >
+    </a>
+    <nav>
+        <ul>
+            <li><a class="actif" href="index.html">No sabres</a></li>
+            <li><a href="service-client.html">Service client</a></li>
+        </ul>
+    </nav>
+</header>
+<main class="page-sabre">
+    <div class="sabre">
+        <h1>Sabre laser Cal Kestis</h1>
 
-            <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
+        <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
 
-            <p>
-                Le SL-Cal est un sabre laser de la gamme REPLIKA.
-                Inspiré par le sabre de Cal Kestis, dans le jeu
-                « Fallen Order » (réplique non officielle).
-            </p>
+        <p>
+            Le SL-Cal est un sabre laser de la gamme REPLIKA.
+            Inspiré par le sabre de Cal Kestis, dans le jeu
+            « Fallen Order » (réplique non officielle).
+        </p>
 
-            <ul class="details">
-                <li>Prix: 349 CHF</li>
-                <li>Stock: 10 pièces</li>
-                <li>Longueur: 38cm</li>
-                <li>Poids: 0,600 kg</li>
-            </ul>
-        </div>
-    </main>
-    <footer>
-        <img src="img/logo-jppjsl-clair.png" alt="Logo de J&#039;peux pas j&#039;ai sabre laser">
-        <div>&copy;2023 JPPJSL</div>
-    </footer>
+        <ul class="details">
+            <li>Prix: 349 CHF</li>
+            <li>Stock: 10 pièces</li>
+            <li>Longueur: 38cm</li>
+            <li>Poids: 0,600 kg</li>
+        </ul>
+    </div>
+</main>
+<footer>
+    <img src="img/logo-jppjsl-clair.png"
+         alt="Logo de J&#039;peux pas j&#039;ai sabre laser">
+    <div>&copy;2023 JPPJSL</div>
+</footer>
 </body>
 </html>
