intégration CSS dans composants

--- a/_souces/index.html
+++ b/_souces/index.html
@@ -36,8 +36,8 @@
 <main class="page-accueil">
     <h1>Découvrez nos sabres <strong>LASER</strong></h1>
 
-    <ul class="sabres">
-        <li>
+    <div class="sabres">
+        <div class="sabre">
             <a href="sabre.html">
                 <figure>
                     <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
@@ -47,8 +47,8 @@
                     </figcaption>
                 </figure>
             </a>
-        </li>
-        <li class="rupture">
+        </div>
+        <div class="sabre rupture">
             <a href="sabre.html">
                 <figure>
                     <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
@@ -59,96 +59,8 @@
                     </figcaption>
                 </figure>
             </a>
-        </li>
-        <li>
-            <a href="sabre.html">
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">349 CHF</div>
-                    </figcaption>
-                </figure>
-            </a>
-        </li>
-        <li>
-            <a href="sabre.html">
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">349 CHF</div>
-                    </figcaption>
-                </figure>
-            </a>
-        </li>
-        <li>
-            <a href="sabre.html">
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">349 CHF</div>
-                    </figcaption>
-                </figure>
-            </a>
-        </li>
-        <li>
-            <a href="sabre.html">
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">349 CHF</div>
-                    </figcaption>
-                </figure>
-            </a>
-        </li>
-        <li>
-            <a href="sabre.html">
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">349 CHF</div>
-                    </figcaption>
-                </figure>
-            </a>
-        </li>
-        <li>
-            <a href="sabre.html">
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">349 CHF</div>
-                    </figcaption>
-                </figure>
-            </a>
-        </li>
-        <li>
-            <a href="sabre.html">
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">349 CHF</div>
-                    </figcaption>
-                </figure>
-            </a>
-        </li>
-        <li>
-            <a href="sabre.html">
-                <figure>
-                    <img src="img/sl-cal.jpg" alt="Sabre laser Cal Kestis">
-                    <figcaption>
-                        <h2>Sabre laser Cal Kestis</h2>
-                        <div class="prix">349 CHF</div>
-                    </figcaption>
-                </figure>
-            </a>
-        </li>
-    </ul>
+        </div>
+    </div>
 </main>
 <footer>
     <img src="img/logo-jppjsl-clair.png"
