ajout donnée et sources

--- a/_souces/sabre.html
+++ b/_souces/sabre.html
@@ -47,7 +47,7 @@
 
         <ul class="details">
             <li>Prix: 349 CHF</li>
-            <li>Stock: 10 pièces</li>
+            <li>Stock: plus de 10 pièces</li>
             <li>Longueur: 38cm</li>
             <li>Poids: 0,600 kg</li>
         </ul>
